# LlmOrchestrator

./: ReadMe.md  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
infrastructure/: startOllama.sh
infrastructure/MlFlow/: startMiniio  startMlFlow  startPostgres
notebooks/: type_matching.ipynb
src/llm_orchestrator/core/: task.py  workflow.py
src/llm_orchestrator/data_store/: repository.py
src/llm_orchestrator/executors/: generic_executor.py  task_finalizer.py  task_finalizer_factory.py
src/llm_orchestrator/inference_api/strategies/: google_ai_studio.py  gpt_oss.py  ollama.py  ollama_slim.py  openai.py  strategy_factory.py
